# battery_automation

./: .dockerignore  .env.example  .gitignore  DECISIONS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/battery_automation/: config.py  decision.py  growatt.py  hypervolt.py  main.py  octopus.py
tests/: test_config.py  test_decision.py  test_growatt.py  test_hypervolt.py  test_octopus.py  test_service.py
