[project]
name = "battery_automation"
version = "0.1.0"
description = "Mirror Octopus Intelligent Go cheap-rate signal onto a Growatt SPH home battery."
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "websockets>=13",
    "growattServer>=2.1.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
]

[project.scripts]
battery-automation = "battery_automation.main:run"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
